<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_share_black_24dp"
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/about"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/add_to_favourite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit_app"
        app:showAsAction="never" />

</menu>
